<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCC9C9"
    android:theme="@style/AppTheme"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#FFEE58"
        android:onClick="siguiente"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="109dp"
        android:layout_height="72dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_respuesta"
        app:layout_constraintStart_toStartOf="@+id/tv_respuesta"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <RadioButton
            android:id="@+id/rb_hombre"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:buttonTint="#FFEE58"
            android:onClick="seleccion"
            android:text="@string/hombre"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_mujer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:buttonTint="#FFEE58"
            android:onClick="seleccion"
            android:text="@string/mujer"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#33691E"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.26"
        tools:text="gsdgsdg" />

    <TextView
        android:id="@+id/tv_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pregunta"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="320dp"
        android:layout_height="292dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/tv_pregunta">

        <ImageView
            android:id="@+id/iv_imagen"
            android:layout_width="189dp"
            android:layout_height="270dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imagen"
            app:srcCompat="@drawable/homero" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>